--- a/src/main/resources/templates/systems/system.html
+++ b/src/main/resources/templates/systems/system.html
@@ -17,7 +17,7 @@
     <h6 style="margin-left: calc(5% + 27px);">Reviews scraped from the web</h6>
 </header>
 
-<h3 class="ul-header" style="margin-top: 5%;">Search Results</h3>
+<h3 class="ul-header" style="margin-top: 5%; text-transform: capitalize;" th:text="${#strings.toLowerCase(system.name)}"></h3>
 <table class="table results" id="resultsTable">
     <thead>
         <tr>
@@ -31,7 +31,7 @@
         <th scope="row"><a th:text="${game.name}" href="/game/${game.name}" th:href="@{/game/} + ${game.name}"></a></th>
         <td>
             <div th:each="system : ${game.systems}" >
-                <span th:text="${system.name}"></span>
+                <a th:text="${system.name}" th:href="@{/system/} + ${system.name}"></a>
             </div>
         </td>
         <td><span th:text="${game.release}"></span></td>
