--- a/src/main/resources/templates/developers/developer.html
+++ b/src/main/resources/templates/developers/developer.html
@@ -4,11 +4,12 @@
     <meta http-equiv="content-Type" content="text/html; charset= UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="../../css/index.css" th:href="@{../../css/index.css}"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>GameScraper</title>
 </head>
 <body>
 <header class="text-left">
-    <h1 class="title">GameScraper</h1>
+    <h1 class="title" th:href="@{/}" onclick="goToIndex();">GameScraper</h1>
     <div class="form-group">
         <label style="margin-right: 3%;" for="searchBar">Search by Game, Author, or Release Date.</label>
         <input type="text" class="form-control search" id="searchBar" placeholder="Search"/>
@@ -16,24 +17,44 @@
     <h6 style="margin-left: calc(5% + 27px);">Reviews scraped from the web</h6>
 </header>
 
-<h3 class="ul-header" style="margin-top: 5%;">Search Results</h3>
-<table class="table table-hover results" id="resultsTable">
+<h3 class="ul-header" style="margin-top: 5%; text-transform: capitalize;" th:text="${#strings.toLowerCase(developer.name)}"></h3>
+<table class="table results" id="resultsTable">
     <thead>
     <tr>
-        <th scope="row">#</th>
-        <td>Game</td>
+        <th scope="row">Game</th>
         <td>System</td>
         <td>Released</td>
     </tr>
     </thead>
     <tbody>
     <tr th:each="game : ${developer.games}">
-        <th scope="row"><span th:text="${game.index}"></span></th>
-        <td><span th:text="${game.name}" href="/game/${game.name}"></span></td>
-        <td><span th:text="${game.system}"></span></td>
+        <th scope="row"><a th:text="${game.name}" href="/game/${game.name}" th:href="@{/game/} + ${game.name}"></a></th>
+        <td>
+            <div th:each="system : ${game.systems}" >
+                <a th:text="${system.name}" th:href="@{/system/} + ${system.name}"></a>
+            </div>
+        </td>
         <td><span th:text="${game.release}"></span></td>
     </tr>
     </tbody>
 </table>
+
+<script th:inline="javascript">
+/*<![CDATA[*/
+$(document).ready(function() {
+    var table = document.getElementById('resultsTable').getElementsByTagName("tr");
+    for(var i = 0; i < table.length; i++){
+
+        if((i % 2) == 1){
+            table[i].className += "odd"
+        }
+    }
+});
+
+function goToIndex(){
+    window.location = "/";
+}
+/*]]>*/
+</script>
 </body>
 </html>
