--- a/src/main/resources/templates/genres/genre.html
+++ b/src/main/resources/templates/genres/genre.html
@@ -31,7 +31,7 @@
             <th scope="row"><a th:text="${game.name}" href="/game/${game.name}" th:href="@{/game/} + ${game.name}"></a></th>
             <td>
                 <div th:each="system : ${game.systems}" >
-                    <span th:text="${system.name}"></span>
+                    <a th:text="${system.name}" th:href="@{/system/} + ${system.name}"></a>
                 </div>
             </td>
             <td><span th:text="${game.release}"></span></td>
