genres messing up

--- a/src/main/resources/templates/games/game.html
+++ b/src/main/resources/templates/games/game.html
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="clearfix">
         <img th:src="${game.imageUrl}" th:alt="${game.name}" class="img-thumbnail game-image"></img>
-        <h1 class="ul-header game-image-description"><span th:text= "${game.name}"/></h1>
+        <h1 style="font: large;" class="ul-header game-image-description"><span th:text= "${game.name}"/></h1>
     </div>
 
 
@@ -59,17 +59,17 @@
         </tbody>
     </table>
 
-    <table id="scoreTable" style="width: 35%; float:right; margin-right: 5%;" class="table table-hover results scores">
+    <table id="scoreTable" style="width: 35%; float:right; margin-right: 5%;" class="table results purchases">
         <thead>
             <tr>
-                <th scope="row">Source</th>
+                <th scope="row" style="width: 55%;">Source</th>
                 <td>Score</td>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="purchases-body">
             <tr th:each="score : ${score}">
-                <td th:if="${scoreTable.length} % 2 == 0"><span  th:text="${score.name}: ${score.score}"></span></td>
-                <td th:if="${scoreTable.length} % 2 == 1" style="background: lightgray;"><span  th:text="${score.name}: ${score.score}"></span></td>
+                <td style="width: 55%;"><span th:text="${score.name}"></span></td>
+                <td><span th:text="${score.score.score}"></span></td>
             </tr>
         </tbody>
     </table>
@@ -83,53 +83,8 @@
         </thead>
         <tbody class="purchases-body">
         <tr th:each="purchase : ${purchase}">
-            <td><span th:text="${purchase.name}"></span></td>
-        </tr>
-        <tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
-        </tr><tr>
-            <td style="width: 55%;"><span>WOW</span></td>
-            <td><span>WOW</span></td>
+            <td style="width: 55%;"><span th:text="${purchase.name}"></span></td>
+            <td><span th:text="${purchase.price}"></span></td>
         </tr>
         </tbody>
     </table>
@@ -142,22 +97,23 @@
     </div>
     <div class="row" style="margin-left: inherit">
         <div class="col-md-12">
-            <form class="form-horizontal">
+            <form class="form-horizontal" th:action="@{/game/addComment/} + ${game.id}" th:object="${comment}" method="post">
                 <div class="form-group">
                     <div class="input-group">
                         <!--<input type="text" class="form-control" placeholder="" />-->
-                        <textarea class="form-control" rows="3" placeholder="Insert a comment" style="margin-left: 5%; width: 675px; height: 100px;"></textarea>
+                        <textarea th:field="*{text}" class="form-control" rows="3" placeholder="Insert a comment" style="margin-left: 5%; width: 675px; height: 100px;"></textarea>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" style="margin-left: 2%">Add</button>
+                <button type="submit" value="Submit" class="btn btn-primary" style="margin-left: 2%">Add</button>
             </form>
         </div>
     </div>
 
-    <div class="row" style="margin-left: inherit; margin-top: 10px">
+    <div class="row" style="margin-left: inherit; margin-top: 25px">
         <div th:each="comment : ${game.comments}" class="col-md-12" >
             <blockquote>
                 <p th:text="${comment.text}"></p>
+                <footer th:text="${#dates.format(comment.date, 'dd-MMM-yyyy hh:mm:ss')}"></footer>
             </blockquote>
         </div>
     </div>
@@ -171,6 +127,15 @@
 
             if((i % 2) == 1){
                 table[i].className += "odd"
+            }
+        }
+
+        document.getElementById('scoreTable').style.height = document.getElementById('resultsTable').style.height;
+        var table2 = document.getElementById('scoreTable').getElementsByTagName("tr");
+        for(var i = 0; i < table.length; i++){
+
+            if((i % 2) == 1){
+                table2[i].className += "odd"
             }
         }
     });
