--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,14 @@
     <meta http-equiv="content-Type" content="text/html; charset= UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="/static/css/index.css" th:href="@{css/index.css}"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>GameScraper</title>
 </head>
 <body>
     <header class="text-left">
         <h1 class="title">GameScraper</h1>
         <div class="form-group">
-            <label style="margin-right: 3%;" for="searchBar">Search by Game, Author, or Release Date.</label>
+            <label style="margin-right: 3%;" for="searchBar">Search by Game, Genre, or System.</label>
             <input type="text" class="form-control search" id="searchBar" placeholder="Search"/>
         </div>
         <h6 style="margin-left: calc(5% + 27px);" >Reviews scraped from the web</h6>
@@ -30,7 +31,7 @@
             </div>
         </section>
     </div>
-    <div>
+    <div style="margin-bottom: 3%;">
         <section>
             <h3 class="ul-header">Games by System</h3>
             <div style="margin-top: 1%; text-transform: lowercase;" class="clearfix">
@@ -40,5 +41,19 @@
             </div>
         </section>
     </div>
+
+<script th:inline="javascript">
+/*<![CDATA[*/
+$("#searchBar").keyup(function(event){
+    if(event.keyCode == 13){
+        window.location = "/search/" + document.getElementById('searchBar').value;
+    }
+});
+
+function goToIndex(){
+    window.location = "/";
+}
+/*]]>*/
+</script>
 </body>
 </html>
