--- a/src/main/resources/templates/scores/score.html
+++ b/src/main/resources/templates/scores/score.html
@@ -10,7 +10,7 @@
 <header class="text-left">
     <h1 class="title">GameScraper</h1>
     <div class="form-group">
-        <label style="margin-right: 3%;" for="searchBar">Search by Game, Author, or Release Date.</label>
+        <label style="margin-right: 3%;" for="searchBar">Search by Game, Genre, or System.</label>
         <input type="text" class="form-control search" id="searchBar" placeholder="Search"/>
     </div>
     <h6 style="margin-left: calc(5% + 27px);">Reviews scraped from the web</h6>
@@ -35,5 +35,18 @@
     </tr>
     </tbody>
 </table>
+<script th:inline="javascript">
+/*<![CDATA[*/
+$("#searchBar").keyup(function(event){
+    if(event.keyCode == 13){
+        window.location = "/search/" + document.getElementById('searchBar').value;
+    }
+});
+
+function goToIndex(){
+    window.location = "/";
+}
+/*]]>*/
+</script>
 </body>
 </html>
